--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=007
-sonar.organization=config-test
+sonar.projectKey=Macro80-20_config-project
+sonar.organization=macro80-20
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=007
