--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -17,7 +17,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
- write-to-console:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo 'Pull request to Dev made'
+      - name: ConsoleLog
+        run: echo 'Pull request to Dev made'
