Create separate jobs

--- a/.github/workflows/pr-master.yml
+++ b/.github/workflows/pr-master.yml
@@ -6,6 +6,20 @@ on:
       - master
 jobs:
   write-to-console:
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - run: echo 'Pull request with master as the base branch'
+  
+  sonarcloud:
+    name: SonarCloud
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
