--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -1,10 +1,16 @@
-name: PR Development
+name: Development
 on:
   pull_request:
    types: [opened, synchronize, reopened ,review_requested]
    branches:
       - development
 jobs:
+ write-to-console:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo 'Pull request to Dev made'
+
  sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
@@ -17,5 +23,3 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: ConsoleLog
-        run: echo 'Pull request to Dev made'
