--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -5,7 +5,7 @@ on:
    branches:
       - development
 jobs:
- write-to-console:
+ tests:
     name: Run tests
     runs-on: ubuntu-latest
     steps:
