--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -12,7 +12,7 @@ jobs:
       - name: PR title
         uses: deepakputhraya/action-pr-title@master
         with:
-             regex: '([a-z])+\/([a-z])+' # Regex the title should match.
+             regex: '([a-z])+\/([a-z0-9])+' # Regex the title should match.
              allowed_prefixes: 'feat,wip,bug,junk,refactor' # title should start with the given prefix
              disallowed_prefixes: 'feat/,hotfix' # title should not start with the given prefix
              prefix_case_sensitive: false # title prefix are case insensitive
