--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -5,13 +5,12 @@ on:
    branches:
       - development
 jobs:
- tests:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo 'Pull request to Dev made'
-      - name: PR title
-        uses: deepakputhraya/action-pr-title@master
-        with:
+ branch_name:
+  name: Branch name
+  runs-on: ubuntu-latest
+  steps:
+   - uses: deepakputhraya/action-pr-title@master
+     with:
              regex: '([a-z])+\/([a-z0-9])+' # Regex the title should match.
              allowed_prefixes: 'feat,wip,bug,junk,refactor' # title should start with the given prefix
              disallowed_prefixes: 'feat/,hotfix' # title should not start with the given prefix
@@ -19,6 +18,12 @@ jobs:
              min_length: 5 # Min length of the title
              max_length: 20 # Max length of the title
              github_token: ${{ github.token }} # Default: ${{ github.token }}
+
+ tests:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo 'Pull request to Dev made'
+       
 
  sonarcloud:
     name: SonarCloud
