--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -1,7 +1,7 @@
 name: PR Development
 on:
   pull_request:
-   types: [opened, synchronize, reopened ,review_requested]
+   types: [opened, synchronize, reopened ,edited,review_requested]
    branches:
       - development
 jobs:
