--- a/.github/workflows/pr-dev.yml
+++ b/.github/workflows/pr-dev.yml
@@ -4,6 +4,7 @@ on:
    types: [opened, synchronize, reopened ,edited,review_requested]
    branches:
       - development
+    branches
 jobs:
  branch_name:
   name: Branch name convention
@@ -11,11 +12,10 @@ jobs:
   steps:
    - uses: deepakputhraya/action-pr-title@master
      with:
-             regex: '([a-z])+\/([a-z0-9])+' # Regex the title should match.
              allowed_prefixes: 'feat,wip,bug,junk,refactor' # title should start with the given prefix
              prefix_case_sensitive: false # title prefix are case insensitive
              min_length: 5 # Min length of the title
-             max_length: 20 # Max length of the title
+             max_length: 50
              github_token: ${{ github.token }} # Default: ${{ github.token }}
 
  tests:
